Fixed longarrow spacing

--- a/styles/language-isabelle.less
+++ b/styles/language-isabelle.less
@@ -18,6 +18,11 @@
   width: 1ex;
 }
 
+.syntax--symbol.syntax--isabelle.syntax--longrightarrow,
+.syntax--symbol.syntax--isabelle.syntax--Longrightarrow {
+  width:3ex;
+}
+
 .syntax--isabelle.syntax--zero::before {
     width: 1ex;
     content: "\01d7ec";
